# libsoundiopp

./: .gitignore  CMakeLists.txt
include/soundiopp/: soundiopp.h
src/: channellayout.cpp  context.cpp  device.cpp  instream.cpp  outstream.cpp  ringbuffer.cpp  soundiopp.cpp
